Set nginx default server

--- a/docker/demoApp.conf
+++ b/docker/demoApp.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name 192.168.150.157;
+    listen 80 default_server;
+    server_name _;
     root /home/app/demoApp/public;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
