ooops undid default server. No catching everything at *.vmtopia.lab

--- a/docker/demoApp.conf
+++ b/docker/demoApp.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 default_server;
-    server_name _;
+    listen 80;
+    server_name *.vmtopia.lab;
     root /home/app/demoApp/public;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
